internet-gate.tf
resource "aws_internet_gateway" "terraform_internet_gateway" {
	vpc_id = aws_vpc.terraform_vpc.id
	tags = {
		Name = "${var.internet_gateway_name}"
		ManagedBy = "${var.managed_by}"
	}
}
